--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -17,3 +17,37 @@
     width: 250px;
     background-color: #F5E9CF;
 }
+
+.nav-sidebar .nav-item>.nav-link {
+    position: relative;
+    margin-right: 75px;
+}
+
+.selectize-control {
+    margin-bottom: 10px;
+    margin-right: 100px;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: .5rem;
+    margin-right: 100px;
+}
+
+div.sidebar .shiny-input-container {
+    padding: 12px 100px 0px 5px;
+    white-space: normal;
+}
+
+.dropdown-menu.show {
+    display: contents;
+}
+
+.btn-default {
+    background-color: #4D455D;
+    border-color: #ddd;
+    color: #fff;
+    width: 60%;
+    border-radius: 2rem;
+}
+
