--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -102,7 +102,7 @@ div.sidebar .shiny-input-container {
     position: absolute;
     top: 0;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: start;
     border-style: ridge;
     border-top-left-radius: 30px;
