disable tabs based on data load

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -108,6 +108,14 @@ div.sidebar .shiny-input-container {
     border: 2px solid #293B5F !important;
 }
 
+.nav-link.disabled {
+    background-color: #E1E5EA !important;
+    pointer-events: none;
+    cursor: default;
+    margin-right: 5px !important;
+    border: 2px solid grey !important;
+}
+
 .os-theme-dark>.os-scrollbar, .os-theme-light>.os-scrollbar {
     padding: 2px;
     box-sizing: border-box;
