--- a/docs/deps/bootstrap-5.2.2/font.css
+++ b/docs/deps/bootstrap-5.2.2/font.css
@@ -1,14 +1,21 @@
 @font-face {
-  font-family: 'News Cycle';
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src: url(fonts/S6u8w4BMUTPHjxswWA.woff) format('woff');
+}
+@font-face {
+  font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(fonts/CSR64z1Qlv-GDxkbKVQ_TOQ.woff) format('woff');
+  src: url(fonts/S6uyw4BMUTPHvxo.woff) format('woff');
 }
 @font-face {
-  font-family: 'News Cycle';
+  font-family: 'Lato';
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(fonts/CSR54z1Qlv-GDxkbKVQ_dFsvaNA.woff) format('woff');
+  src: url(fonts/S6u9w4BMUTPHh6UVeww.woff) format('woff');
 }
