--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -348,3 +348,31 @@ div.sidebar .shiny-input-container {
 p.rtables-main-title {
   font-weight: 600;
 }
+
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    justify-content: space-around;
+    display: flex;
+}
+
+.carousel-control-next-icon {
+    background-image: url(data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E) !important;
+    background-color: #435B66 !important;
+    height: 35px !important;
+    width: 50px !important;
+    opacity: 1 !important;
+}
+
+.carousel-control-prev-icon {
+    background-image: url(data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E);
+    background-color: #435B66 !important;
+    height: 35px !important;
+    width: 50px !important;
+    opacity: 1 !important;
+}
+
+.carousel-indicators {
+  display: none;
+}
